# ValhallaSkinServer

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  Pipfile  Procfile  Procfile.windows  README.md  USAGE.md  alembic.ini  app.py  auth.txt  bootstrap.sh  client.py  config.py  db_hash_hdskins_metadata.table  db_hash_hdskins_textures.table  db_hash_hdskins_tokens.table  db_hash_hdskins_uploaders.table  db_hash_hdskins_uploads.table  db_hash_hdskins_users.table  debug.sh  docker-compose.yml  gunicornconfig.py  hdskins.sql  kube.yaml  pyproject.toml  renovate.json  requirements-prod.txt  run.sh  wsgi.py
.github/workflows/: black.yml  ci.yml  flake8.yml  isort.yml  lint.yml  pytest.yml  ruff.yml
cgi-bin/: clear.py  hdskins-template.ini  legacy.py  skins.py  upload.py
cgi-bin/auth/: create.py
cgi-bin/lib/: mojang.py  sql.py
dashboard/: .eslintrc  .eslintrc.cjs  .prettierrc.cjs  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.vue  main.ts  style.scss  vite-env.d.ts
dashboard/src/components/: Dashboard.vue  SelectButton.vue  Switch.vue
hdskins/: app.py  database.py  hdskins.py  mojang.py  validate.py
tables/: 403f3fd0e0f64a2fb8633fe970e0ad81_metadata.table  403f3fd0e0f64a2fb8633fe970e0ad81_textures.table  403f3fd0e0f64a2fb8633fe970e0ad81_tokens.table  403f3fd0e0f64a2fb8633fe970e0ad81_uploaders.table  403f3fd0e0f64a2fb8633fe970e0ad81_uploads.table  403f3fd0e0f64a2fb8633fe970e0ad81_users.table
valhalla/: USAGE.md  __init__.py  __version__.py  app.py  auth.py  byteconv.py  config.py  crud.py  database.py  db.py  files.py  image.py  limit.py  models.py  mojang.py  schemas.py  util.py  utils.py  valhalla.py  validate.py  xbox.py
valhalla/alembic/: env.py
valhalla/alembic/versions/: 0447a53e7d20_legacy.py  6ca6cdcf1416_v1.py
valhalla/api/: __init__.py  microsoft.py  subapp.py  utils.py  v0.py  v1.py
valhalla/api/v1/: __init__.py  auth.py  bulk.py  history.py  legacy.py  schemas.py  textures.py  user.py  utils.py
valhalla/api/v2/: __init__.py  history.py  schemas.py  textures.py  user.py
valhalla/auth/: __init__.py  auth.py  mojang.py  xbox.py
valhalla/cli/: __init__.py  old_models.py
valhalla/dashboard/: __init__.py
valhalla/dashboard/templates/: base.html  dashboard.html  seo.html  vite.html
valhalla/migrations/: 052f0fb7b5ec_secret_sanity.py  84c77598d2be_v1.py
valhalla/public/: base.css
valhalla/root/: __init__.py
valhalla/root/static/: robots.txt
valhalla/tests/: conftest.py  test_api_interop.py  test_app.py  test_app_v2.py  test_bulk.py  test_config.py  test_db.py  test_legacy.py  test_s3_upload.py  test_schemas.py  test_textures.py  test_util.py
valhalla/tests/assets/: README.md  __init__.py
valhalla/tests/assets/bad/: bad_image.txt
valhalla/tests/assets/good/: 1024x1024.txt  1024x512.txt  128x128.txt  256x256.txt  512x256.txt  64x64.txt
